[tool.poetry]
name = "limit_reader"
version = "0.1.0"
description = "Limit read size"
authors = ["Miki Tebeka <miki@353solutions.com>"]
license = "MIT"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "test_limit_reader.py",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v --doctest-modules -rf --flake8"
